--- a/public/css/main.css
+++ b/public/css/main.css
@@ -30,8 +30,10 @@ body {
 
     h2 {
         font-size: 1.25em;
+        margin-top: 2em;
+        margin-bottom: 1.25em;
     }
-    
+
     .background-section {
         
         img {
@@ -46,9 +48,6 @@ body {
         }
 
     }
-        
-
-
 
     .hobbies-section {
         li {
