--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -12,7 +12,7 @@
         const currentPort = window.location.port;
 
         //Calculate WebSocket port (current port + 1)
-        const wsPort = currentPort ? (pareInt(currentPort) + 1) : 3001;
+        const wsPort = currentPort ? (parseInt(currentPort) + 1) : 3001;
 
         //Create WebSocket connection using dynamic hostname and port
         const ws = new WebSocket(`ws://${host}:${wsPort}`);
@@ -29,6 +29,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/about">About</a></li>
                 <li><a href="/products">Products</a></li>
+                <li><a href="/catalog">Course Catalog</a></li>
             </ul>
         </nav>
     </header>
