coding challenge nearly complete, trouble testing

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -2,6 +2,6 @@
     <h1><%= title %></h1>
 <%- include('partials/header') %>
     <main>
-        <p>[Add some content specific to this page]</p>
+        <p>Welcome to this site!</p>
     </main>
 <%- include('partials/footer') %>
