--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -23,13 +23,16 @@
     </script>
     <% } %>
 </head>
-<body>
+<body class="<%= bodyClass %>">
     <header>
+        <h1><%- greeting %></h1>
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/about">About</a></li>
                 <li><a href="/catalog">Course Catalog</a></li>
+                <li><a href="/departments">Departments</a></li>
+                <li><a href="/demo">Middleware Demo</a></li>
                 <li><a href="/faculty">Faculty Directory</a></li>
             </ul>
         </nav>
