--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,13 +1,21 @@
 html, body {
-    background-color: rgb(229, 245, 251);
     font-family: Arial, sans-serif;
     margin: 1em;
     padding: 20px;
     line-height: 1.5em;
     color: rgb(11, 0, 37);
+
+    
+    &.blue-theme { background-color: #e3f2fd; }
+    &.green-theme { background-color: #e8f5e8; }
+    &.red-theme { background-color: #ffebee; }
+    &.yellow-theme { background-color: #FFFFE0; }
+    &.purple-theme { background-color: #CBC3E3; }
+    &.orange-theme { background-color: #FFE6CC; }
 }
 
 body {
+    
     nav {
         ul {
             list-style-type: none;
@@ -55,6 +63,5 @@ body {
             list-style: circle;
         }
     }
-
 
 }
