--- a/src/views/faculty/list.ejs
+++ b/src/views/faculty/list.ejs
@@ -5,17 +5,17 @@
     
     <div class="sort-options">
         <span>Sort by: </span>
-        <a href="/faculty" class="<%= currentSort === 'name' ? 'active' : '' %>">Name</a>
+        <a href="/faculty?sort=name" class="<%= currentSort === 'name' ? 'active' : '' %>">Name</a>
         <a href="/faculty?sort=department" class="<%= currentSort === 'department' ? 'active' : '' %>">Department</a>
         <a href="/faculty?sort=title" class="<%= currentSort === 'title' ? 'active' : '' %>">Title</a>
     </div>
     
     <div class="faculty-list">
-        <% faculty.forEach(member => { %>
+        <% faculty.forEach(faculty => { %>
             <div class="faculty-card">
-                <h3><a href="/faculty/<%= member.id %>"><%= member.name %></a></h3>
-                <p class="faculty-title"><%= member.title %></p>
-                <p class="faculty-department"><%= member.department %></p>
+                <h3><a href="/faculty/<%= faculty.id %>"><%= faculty.name %></a></h3>
+                <p class="faculty-title"><%= faculty.title %></p>
+                <p class="faculty-department"><%= faculty.department %></p>
             </div>
         <% }); %>
     </div>
