Wk 5 postgres activity

--- a/src/views/faculty/detail.ejs
+++ b/src/views/faculty/detail.ejs
@@ -2,7 +2,7 @@
 <main>
     <div class="faculty-profile">
         <h1><%= faculty.name %></h1>
-        <p class="faculty-title"><%= faculty.title %></p>
+        <p class="faculty-title"><strong><%= faculty.title %></strong></p>
         <p class="faculty-department"><%= faculty.department %> Department</p>
     </div>
     
