--- a/src/views/catalog/list.ejs
+++ b/src/views/catalog/list.ejs
@@ -1,5 +1,5 @@
     <h1><%= title %></h1>
-<%- include('partials/header') %>
+<%- include('../partials/header') %>
 <main>
     <h1>Course Catalog</h1>
     <p>Browse our available courses and click on any course to see detailed information including available sections and instructors.</p>
@@ -32,4 +32,4 @@
         <% }); %>
     </div>
 </main>
-<%- include('partials/footer') %>
+<%- include('../partials/footer') %>
