--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -12,6 +12,8 @@
                 <li><a href="/departments">Departments</a></li>
                 <li><a href="/demo">Middleware Demo</a></li>
                 <li><a href="/faculty">Faculty Directory</a></li>
+                <li><a href="/contact">Contact</a></li>
+                <li><a href="/contact/responses">Contact Responses</a></li>
             </ul>
         </nav>
     </header>
