added img to home.ejs

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -3,5 +3,6 @@
 <%- include('partials/header') %>
     <main>
         <p>Welcome to this site!</p>
+        <img src="/images/happy-corgi.jpg" alt="Happy Corgi" class="responsive-image">
     </main>
 <%- include('partials/footer') %>
