--- a/public/css/main.css
+++ b/public/css/main.css
@@ -15,6 +15,11 @@ html, body {
 }
 
 body {
+
+    img.responsive-image {
+        max-width: 100%;
+        height: auto;
+    }
     
     nav {
         ul {
@@ -32,7 +37,7 @@ body {
             
             &:hover {
                 color: #0066cc;
-            }
+            }   
         }
     }
 
